# turtle

./: .ackrc  .gitignore  .rustfmt.toml  .travis.yml  404.html  CANVAS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  _config.yml  appveyor.yml  azure-pipelines.yml  build-wasm  canvas.html  docs.md  github.md  graph_times.py  index.html  perf-flame  perf-stat  worker.js
.github/: dependabot.yml
_data/: lib.json
_includes/: docs-navigation.html  footer.html  header.html  icon-github.html  icon-twitter.html
_layouts/: docs.html  page.html  post.html
_sass/: _buttons.scss
assets/css/: docs.scss  home.scss  style.scss
docs/: .sass-lint.yml  CNAME  _config.yml  basic-movement.md  basic-rotation.md  creating-a-turtle.md  drawing-shapes.md  getting-started.md  index.html  index.md
docs/.well-known/: brave-payments-verification.txt
docs/_data/: guide.json  lib.json
docs/_includes/: docs-navigation.html  footer.html  head.html  header.html
docs/_layouts/: docs.html  page.html
docs/_sass/: _buttons.scss  _github.scss
docs/assets/css/: docs.scss  home.scss  style.scss
docs/assets/images/guide/basic-movement/: turn-derivation.xcf
docs/guide/: animation.md  basic-movement.md  basic-rotation.md  command-line-arguments.md  creating-a-turtle.md  drawing-basics-exercises.md  drawing-basics.md  drawing-control.md  drawing-shapes.md  event-handling.md  example-circle.md  example-gradient.md  example-maze.md  example-polygons.md  example-reversi.md  example-snowman.md  example-spiral.md  example-square.md  example-star.md  filling-shapes.md  getting-help.md  getting-started.md  index.md  intro.md  overview.md  pen-control.md  planning-drawings.md  position-heading.md  quickstart.md  random.md  running-examples.md  turtle-canvas.md  what-is-programming.md
examples/: README.md  arrowkeys.rs  beats.rs  beats_by_dre.rs  bezier.rs  bits.rs  circle.rs  clock.rs  colored_spiral.rs  coloredridge.rs  concurrencytest.rs  creating_a_turtle.rs  dashed_circle.rs  dragon.rs  dragon_circle.rs  draw_turtle.rs  drawcircle.rs  drawtest.rs  empty_star.rs  ferris.rs  fibonacci.rs  flower.rs  followmouse.rs  geometric_art.rs  gradient.rs  hangman.rs  heart.rs  loadtest.rs  logo_interpreter.rs  logspiral.rs  maze.rs  my_logo_program.txt  nestedcubes.rs  overlapping_squares.rs  randomcolors.rs  reversi.rs  rotationtest.rs  rotationtest2.rs  runtest.rs  rust.rs  (+20 more)
examples/battleship/: battlestate.rs  bot.rs  channel.rs  config.rs  crosshair.rs  game.rs  grid.rs  main.rs  ship.rs  utils.rs
examples/letters/: a_to_d.rs  diacritics.rs  e_to_i.rs  j_to_o.rs  letters.rs  main.rs  numbers.rs  p_to_t.rs  punctuation.rs  u_to_z.rs
examples/maze/: cell.rs  grid.rs  main.rs  maze.rs  solver.rs  wall.rs
examples/reversi/: board.rs  main.rs  tiles.rs
examples/sample_logo_programs/: print_R.txt  squares.txt
learn/: index.md
src/: angle.rs  animation.rs  app.rs  async_drawing.rs  async_turtle.rs  canvas.rs  client.rs  clock.rs  color.rs  debug.rs  drawing.rs  drawing_thread.rs  event.rs  extensions.rs  ideoutput.rs  ipc_protocol.rs  lib.rs  lib_.rs  main.rs  messenger.rs  parser.rs  point.rs  query.rs  radians.rs  rand.rs  render_strategy.rs  renderer.rs  renderer2.rs  renderer_client.rs  renderer_process.rs  renderer_server.rs  renderer_server_process.rs  runtime.rs  screen.rs  server.rs  speed.rs  state.rs  sync_runtime.rs  timer.rs  turtle.rs  (+2 more)
src/canvas/: mod.rs  rgba_buffer_graphics.rs
src/color/: color_consts.rs  colors.rs
src/desktop/: messenger.rs  mod.rs  renderer.rs  renderer_process.rs  server.rs
src/ipc_protocol/: async_ipc_receiver.rs  messages.rs  protocol.rs
src/piston/: mod.rs  renderer_process.rs
src/renderer_client/: renderer_server_process.rs
src/renderer_process/: desktop.rs  mod.rs  test.rs  wasm.rs
src/renderer_server/: access_control.rs  animation.rs  app.rs  backend.rs  coords.rs  event_loop_notifier.rs  handlers.rs  main.rs  renderer.rs  renderer_server_process.rs  request_sequencer.rs  start.rs  state.rs  test_event_loop_notifier.rs  test_main.rs
src/renderer_server/access_control/: data_guard.rs  data_request.rs  resources.rs
src/renderer_server/app/: animation.rs
src/renderer_server/backend/: multiprocessed.rs  multithreaded.rs  test.rs
src/renderer_server/handlers/: animation.rs  clear.rs  create_turtle.rs  debug.rs  destroy_drawing.rs  drawing_prop.rs  export_drawings.rs  fill.rs  poll_event.rs  turtle_prop.rs
src/renderer_server/renderer/: display_list.rs  export.rs
src/renderer_server_process/: desktop.rs  multithreaded.rs  test.rs
src/wasm/: mod.rs
turtle_docs_helper/: Cargo.toml
turtle_docs_helper/src/: lib.rs
turtle_docs_helpers/: Cargo.toml
turtle_docs_helpers/src/: lib.rs
web/: index.html  index.js
