[package]
name = "turtle"
version = "1.0.0-rc.4"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
description = "Learn the Rust language by creating animated drawings!"
homepage = "http://turtle.rs"
repository = "https://github.com/sunjay/turtle"
readme = "README.md"
keywords = ["turtle", "graphics", "drawing", "teaching", "beginner"]
# crates.io/category_slugs
categories = ["rendering", "rendering::graphics-api", "rendering::engine", "games", "gui"]
license = "MPL-2.0"
edition = "2018"

# Make sure docs are always generated with the "unstable" feature activated
[package.metadata.docs.rs]
features = [ "unstable" ]

[badges]
# Azure DevOps: `project` is required. `pipeline` is required. `build` is optional; default is `1`
# Note: project = `organization/project`, pipeline = `name_of_pipeline`, build = `definitionId`
azure-devops = { project = "sunjayv/turtle", pipeline = "sunjay.turtle" }
# Codecov: `repository` is required. `branch` is optional; default is `master`
# `service` is optional; valid values are `github` (default), `bitbucket`, and `gitlab`.
# codecov = { repository = "sunjay/turtle", branch = "master", service = "github" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

interpolation = "0.2"
rand = "0.7"

svg = "0.8"

pathfinder_canvas = "0.5"
# These versions must stay synced with the dependencies of pathfinder_canvas
pathfinder_renderer = "0.5"
pathfinder_resources = "0.5"
pathfinder_color = "0.5"
pathfinder_geometry = "0.5"
pathfinder_gl = "0.5"
glutin = "0.24"
gl = "0.14"

ipc-channel = "0.14"
thiserror = "1.0"
once_cell = "1.3"

cfg-if = "0.1"

parking_lot = "0.10"


# docs_images_save_png feature
resvg = {version = "0.11.0", optional = true}
usvg = {version = "0.11.0", optional = true}

[dependencies.futures-util]
version = "0.3"
default-features = false
features = [
  "channel",
]

[dependencies.tokio]
version = "0.2"
default-features = false
features = [
  "process",
  "io-std",
  "io-util",
  "rt-threaded",
  "blocking",
  "sync",
  "stream",
  "time",
  "macros",
]

# Dependencies used when developing `turtle` directly, but not when using it as
# a library.
[dev-dependencies]
bitvec = "0.17"
# doctest_run_user_input

# Since the debug performance of turtle isn't all that great, we recommend that
# every user of turtle add the following to their Cargo.toml
#
#     [profile.dev.package."*"]
#     opt-level = 3
#
# This increases initial compile time a bit, but after that the library will
# always work performantly even if the user's code itself is in debug mode still
#
# The following setting mimics that for the debug build of this crate.
# We don't use `.package."*"` because the turtle crate *is* the package that
# would be optimized with that setting in an application that uses this crate.
[profile.dev]
opt-level = 3

[features]
# The reason we do this is because doctests don't get cfg(test)
# See: https://github.com/rust-lang/rust/issues/45599
#
# This allows us to write attributes like the following and have it work
# in all tests.
#
# #[cfg(any(feature = "test", test))]
#
# NOTE: This means that tests MUST be run with:
#   cargo test --features "test"
test = []

# Feature flag to disable unstable features by default.
#
# Users of the crate must explicitly opt-in to activate them.
unstable = []

# This feature is only designed for generating images to be used for documentation. Therefore you need to
# set both RUSTFLAGS and RUSTDOCFLAGS to "--cfg docs_images" in order to generate png files when running
# the doc tests. For more information please see: CONTRIBUTING.md
# note: clang is required for resvg
# note: the flag `doctests_run_user_input` is used for tests that 
# require userinput that we don't want to run but to show in the docs
docs_images_save_png = ["resvg", "usvg"]
